--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,66 +5,56 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="21"
+
         android:targetSdkVersion="21" />
 
-
-    
     <permission
         android:name="com.sammoin.commutewatcher.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature"
-        />
-    <uses-permission
-        android:name="com.sammoin.commutewatcher.permission.MAPS_RECEIVE" />
-    <uses-permission
-        android:name="android.permission.INTERNET"/>
-    <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission
-        android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-    <uses-permission
-        android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission
-	    android:name="android.permission.ACCESS_FINE_LOCATION"/>
-	<uses-permission 
-	    android:name="android.permission.ACCESS_NETWORK_STATE"/>
-	<uses-permission
-	    android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-	<uses-permission
-	    android:name="android.permission.WAKE_LOCK"/>
-	
-	<uses-feature
-	    android:required="true"
-	    android:glEsVersion="0x00020000"/>
-	<uses-feature 
-	    android:required="true"
-	    android:name="android.hardware.location.gps"/>
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.sammoin.commutewatcher.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.location.gps"
+        android:required="true" />
+
+
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Bacon" >
-
-
-
         <provider
-            android:authorities="@string/content_authority"
-            android:name=".UserScheduleProvider" >
+            android:name=".UserScheduleProvider"
+            android:authorities="@string/content_authority" >
         </provider>
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-				
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-         <activity 
-             android:name=".TimeAndTravelActivity">
-             
-         </activity>
+        <activity android:name=".TimeAndTravelActivity" >
+        </activity>
+
         <receiver
             android:name=".CommuteWidgetProvider"
             android:label="@string/app_name" >
@@ -72,27 +62,35 @@
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="com.sammoin.commutewatcher.ACTION_DATA_UPDATED" />
             </intent-filter>
+
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget_provider" />
         </receiver>
-        <service android:name=".CommuteCheckAlarmService">
+
+        <service android:name=".CommuteCheckAlarmService" >
         </service>
-        <service android:name=".CommuteWidgetIntentService">
+        <service android:name=".CommuteWidgetIntentService" >
         </service>
-        <receiver android:name=".DeviceStartupReceiver">
+
+        <receiver android:name=".DeviceStartupReceiver" >
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
-            
         </receiver>
-        
-        
+
         <meta-data
-    android:name="com.google.android.gms.version"
-    android:value="@integer/google_play_services_version" 
-    />
-    
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sammoin.commutewatcher.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
