--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sammoin.commutewatcher"
-    android:versionCode="1"
+    android:versionCode="4"
     android:versionName="1.0" >
 
-    <uses-sdk android:targetSdkVersion="21" />
+    <uses-sdk android:minSdkVersion="21" />
 
     <permission
         android:name="com.sammoin.commutewatcher.permission.MAPS_RECEIVE"
@@ -29,55 +29,14 @@
         android:name="android.hardware.location.gps"
         android:required="true" />
 
-    <compatible-screens>
-
-        <!-- all small size screens -->
-        <screen
-            android:screenDensity="ldpi"
-            android:screenSize="small" />
-        <screen
-            android:screenDensity="mdpi"
-            android:screenSize="small" />
-        <screen
-            android:screenDensity="hdpi"
-            android:screenSize="small" />
-        <screen
-            android:screenDensity="xhdpi"
-            android:screenSize="small" />
-        <!-- all normal size screens -->
-        <screen
-            android:screenDensity="ldpi"
-            android:screenSize="normal" />
-        <screen
-            android:screenDensity="mdpi"
-            android:screenSize="normal" />
-        <screen
-            android:screenDensity="hdpi"
-            android:screenSize="normal" />
-        <screen
-            android:screenDensity="xhdpi"
-            android:screenSize="normal" />
-        <!-- all large size screens -->
-        <screen
-            android:screenDensity="ldpi"
-            android:screenSize="large" />
-        <screen
-            android:screenDensity="mdpi"
-            android:screenSize="large" />
-        <screen
-            android:screenDensity="hdpi"
-            android:screenSize="large" />
-        <screen
-            android:screenDensity="xhdpi"
-            android:screenSize="large" />
-    </compatible-screens>
 
     <application
         android:name=".AnalyticsApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/custom_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:installLocation="internalOnly"
         android:theme="@style/Theme.Bacon" >
         <provider
             android:name=".UserScheduleProvider"
@@ -87,7 +46,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
+            <intent-filter  >
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -97,8 +56,9 @@
         </activity>
 
         <receiver
-            android:name=".CommuteWidgetProvider"
-            android:label="@string/app_name" >
+            android:name="com.sammoin.commutewatcher.CommuteWidgetProvider"
+            android:enabled="true"
+            android:label="@string/activity_app_name" >
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="com.sammoin.commutewatcher.ACTION_DATA_UPDATED" />
@@ -114,12 +74,14 @@
         <service android:name=".CommuteWidgetIntentService" >
         </service>
 
-        <receiver android:name=".DeviceStartupReceiver"
+        <receiver
+            android:name="com.sammoin.commutewatcher.DeviceStartupReceiver"
+            android:exported="true"
             android:enabled="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.date_changed" />
+                <action android:name="android.intent.action.DATE_CHANGED" />
             </intent-filter>
         </receiver>
 
